--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "catbox"
   ],
   "dependencies": {
-    "catbox": "^10.0.2"
+    "catbox": "^10.0.2",
+    "catbox-memory": "^3.1.2"
   },
   "devDependencies": {
     "ut-tools": "^5.32.10"
