--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "catbox"
   ],
   "dependencies": {
-    "catbox": "^10.0.2",
-    "catbox-memory": "^3.1.2"
+    "catbox": "10.0.6",
+    "catbox-memory": "4.0.1"
   },
   "devDependencies": {
     "ut-tools": "^6.9.6",
