--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "catbox"
   ],
   "dependencies": {
-    "catbox": "10.0.6",
-    "catbox-memory": "4.0.1"
+    "@hapi/catbox": "11.1.1",
+    "@hapi/catbox-memory": "5.0.1"
   },
   "devDependencies": {
     "ut-tools": "^6.9.7",
-    "tap": "^12.5.2"
+    "tap": "^15.0.9"
   },
   "author": "Software Group",
   "bugs": {
